Update fixing layout bug

--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -3,3 +3,8 @@
     padding: 0;
     margin: 0;
 }
+@mixin flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
