--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,40 +4,40 @@
 
 body {
     background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-center;
     height: 100vh;
 }
 .holder {
     height: 20px;
     width: 230px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    display: grid;
+    gap: 50px;
+    grid-template-columns:repeat(4 , 1fr);
+    &_items {
+        @include flex-center;
+    }
+    .light1 {
+        background-color: yellow;
+        animation-delay: 0.25s;
+    }
+    .light2 {
+        background-color: red;
+        animation-delay: 0.5s;
+    }
+    .light3 {
+        background-color: green;
+        animation-delay: 0.75s;
+    }
+    .light4 {
+        background-color: pink;
+        animation-delay: 0.1s;
+    }
 }
 .light {
     width: 20px;
     aspect-ratio: 1;
     border-radius: 100%;
     animation: flicker $period infinite;
-
-    &:nth-child(1){
-        background-color: yellow;
-        animation-delay: 0.25s;
-    }
-    &:nth-child(2){
-        background-color: red;
-        animation-delay: 0.5s;
-    }
-    &:nth-child(3){
-        background-color: green;
-        animation-delay: 0.75s;
-    }
-    &:nth-child(4){
-        background-color: pink;
-        animation-delay: 1s;
-    }
 }
 @keyframes flicker {
     0% {
